# DeadlockSim

./: .gitignore  BUG_REPORT.md  GUI_REWRITE_PLAN.md  README.md  SPIRIT_DAMAGE_CONTEXT.md  TODO_ENGINE.md  TODO_SIMULATION.md  pyproject.toml  requirements.txt  run_tests.bat  skills-lock.json  startup.sh
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/agents/: plan-writer.agent.md  spec-writer.agent.md  task-generator.agent.md
.github/instructions/: speckit.instructions.md
.github/workflows/: deploy.yml
.playwright-mcp/: page-2026-04-05T22-24-49-147Z.yml  page-2026-04-05T22-25-04-325Z.yml  page-2026-04-05T22-25-12-093Z.yml
.specify/: init-options.json
.specify/memory/: constitution.md
data/: Copy of Deadlock Stats.xlsx
data/api_cache/: abilities.json  hero_items.json  heroes.json  upgrades.json  weapons.json
data/heroes/: abrams.yaml  apollo.yaml  bebop.yaml  billy.yaml  calico.yaml  celeste.yaml  doorman.yaml  drifter.yaml  dynamo.yaml  graves.yaml  grey_talon.yaml  (+28 more)
deadlock_sim/: __init__.py  __main__.py  api_client.py  data.py  logging_config.py  mcp_server.py  models.py  patchnotes.py  ui_assets.py
infra/: README.md  azuredeploy.json  azuredeploy.parameters.json  deploy-code.ps1  deploy-code.sh  deploy.ps1  deploy.sh
issues/: 01-item-scoring-engine.md  02-damage-primitives.md  03-shallow-module-consolidation.md  04-build-tab-state.md  05-data-parsing-testability.md
scripts/: apply_patch.py  debug_tooltip_clipping.py  debug_tooltip_full.py
tests/: conftest.py  test_build_tab_regression.py  test_engine.py  test_gui.py
(+68 files in other folders)
