[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "deadlock-sim"
version = "0.1.0"
description = "Deadlock game damage and combat simulator"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "dearpygui>=2.0",
]

[project.scripts]
deadlock-sim = "deadlock_sim.ui.cli:run_cli"
deadlock-sim-gui = "deadlock_sim.ui.gui:run_gui"
