[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deadlock-sim"
version = "0.1.0"
description = "Deadlock game damage and combat simulator"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "nicegui>=3.0",
    "mcp>=1.0",
    "opencv-python-headless>=4.8",
    "numpy>=1.24",
]

[tool.setuptools.packages.find]
include = ["deadlock_sim*"]

[project.scripts]
deadlock-sim = "deadlock_sim.ui.cli:run_cli"
deadlock-sim-gui = "deadlock_sim.ui.gui:run_gui"
deadlock-sim-mcp = "deadlock_sim.mcp_server:mcp.run"
deadlock-sim-patch = "deadlock_sim.patchnotes:_cli_main"
